add hyphenation to headings
So words like "Unphotographable" break nicely on mobile

--- a/css/typography.css
+++ b/css/typography.css
@@ -8,18 +8,27 @@
   p:not(:has(img, fig, ol, ul, .tag, code, pre)):not(.callout, .callout-content *, [class*="callout"], .footnote, .frontmatter) {
     text-indent: 0.5in;
     hanging-punctuation: first allow-end;
-    /*hyphens: auto;*/
+    hyphens: auto;
   }
 
+
+
   /* === Reset indentation for structural elements === */
-  h1, h2, h3, h4, h5, h6, ul, ol, li, hr, pre, code, 
-  ht, td, figcaption, figure, img, blockquote, table,
+ ul, ol, li, hr, pre, code, ht, td, figcaption, figure, img, blockquote, table,
   .callout, .footnote, .frontmatter {
     text-indent: 0 !important;
     hyphens: none !important;
     hanging-punctuation: unset !important;
   }
+
+  h1, h2, h3, h4, h5, h6 {
+    text-indent: 0 !important;
+    hyphens: auto !important;
+    hanging-punctuation: first allow-end !important;
+  }
+
 }
+
 
 /* Unwrap Tags */
 a.tag ~ br:has(~ a.tag) { display: none; }
